# Parallaria

./: .gitignore  LICENSE
Engine/: CMakeLists.txt  main.cpp  patrickstar.cpp
Engine/Resource/: GUIDLists.json  PatrickStar.asset  Square.asset  TestTexture.json
Engine/Source/Runtime/Core/: CMakeLists.txt
Engine/Source/Runtime/Core/include/: env.hpp  utility.hpp
Engine/Source/Runtime/Core/include/Development/Assert/: Assert.hpp
Engine/Source/Runtime/Core/include/Development/Log/: Log.hpp
Engine/Source/Runtime/Core/include/Development/Pattern/: GSProperty.hpp
Engine/Source/Runtime/Core/include/component/: component.hpp
Engine/Source/Runtime/Core/include/resource/: imageasset.hpp  meshasset.hpp
Engine/Source/Runtime/Core/include/time/: time.hpp
Engine/Source/Runtime/Core/src/Development/Assert/: Assert.cpp
Engine/Source/Runtime/Core/src/graphic/: graphic.cpp
Engine/Source/Runtime/Core/src/resource/: asset.cpp  assetmanager.cpp  imageasset.cpp  meshasset.cpp
Engine/Source/Runtime/Function/: CMakeLists.txt
Engine/Source/Runtime/Function/Include/Function/Context/: EngineContext.hpp
Engine/Source/Runtime/Function/Source/Context/: EngineContext.cpp
Engine/Source/Runtime/Resource/: CMakeLists.txt
Engine/Source/Runtime/Resource/Importer/: AssetImporter.py
Engine/Source/Runtime/Resource/Include/Asset/: Asset.hpp  TextureAsset.hpp
Engine/Source/Runtime/Resource/Include/AssetManager/: AssetManager.hpp
Engine/Source/Runtime/Resource/Include/Resource/Asset/: MeshAsset.hpp  TextureAsset.hpp
Engine/Source/Runtime/Resource/Include/Resource/AssetManager/: AssetManager.hpp
Engine/Source/Runtime/Resource/Include/Resource/Serialization/: Serializable.hpp
Engine/Source/Runtime/Resource/Source/Asset/: MeshAsset.cpp  TextureAsset.cpp
Engine/Source/Runtime/Resource/Source/AssetManager/: AssetManager.cpp
Engine/Source/Runtime/Resource/Source/Serialization/: SerializableTest.cpp
code/: CMakeLists.txt  main.cpp  patrickstar.cpp
code/CoreEngineLayer/: CMakeLists.txt
code/CoreEngineLayer/include/: env.hpp  utility.hpp
code/CoreEngineLayer/include/graphic/: graphic.hpp  renderable.hpp  shader.hpp
code/CoreEngineLayer/include/input/: input.hpp
code/CoreEngineLayer/include/resource/: asset.hpp  assetmanager.hpp  audioasset.hpp
code/CoreEngineLayer/include/time/: frame.hpp  time.hpp
code/CoreEngineLayer/include/timer/: frame.hpp
code/CoreEngineLayer/include/window/: window.hpp
code/CoreEngineLayer/src/: utility.cpp
code/CoreEngineLayer/src/graphic/: graphic.cpp  image.frag  image.vert  polygon.frag  polygon.vert  renderable.cpp  shader.cpp
code/CoreEngineLayer/src/input/: input.cpp
code/CoreEngineLayer/src/resource/: asset.cpp  assetmanager.cpp  audioasset.cpp
code/CoreEngineLayer/src/time/: frame.cpp
code/CoreEngineLayer/src/window/: window.cpp
code/SDL/: CMakeLists.txt
code/SDL/include/SDL3/: SDL_revision.h
code/opengl/: CMakeLists.txt
code/opengl/glad/include/glad/: glad.h
code/resloader/: CMakeLists.txt
docs/: collabmanual.md  process.md
docs/design/: NamingRules.md  Structure.md
