add_library(SDL3 STATIC IMPORTED)
set_target_properties(SDL3 PROPERTIES 
IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/SDL3/SDL3.a"
INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
IMPORTED_LINK_INTERFACE_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/lib/SDL3/SDL3.a")


add_library(SDL3_mixer STATIC IMPORTED)
set_target_properties(SDL3_mixer PROPERTIES 
IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/SDL3_mixer/SDL3_mixer.a"
INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
IMPORTED_LINK_INTERFACE_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/lib/SDL3_mixer/SDL3_mixer.a")
